# Solar-power

./: .gitignore  daily.py  readme.md
data/: out.csv
src/: CMakeLists.txt  main.cpp  pot.pio  pot.pio.h
